--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>CityBlocks.com – Digital Land. Real Opportunity.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="CityBlocks.com – Premium domain held since 1997, now available for acquisition or strategic partnership.">
-    <link rel="stylesheet" href="styles.css">
-    <script defer data-domain="cityblocks.com" src="https://plausible.io/js/plausible.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CityBlocks.com</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <div class="hero">
-        <h1>CITYBLOCKS.COM</h1>
-        <p>Where Cities Begin, Block by Block</p>
-        <p class="subtext">Premium domain held since 1997. Now available for acquisition or strategic partnership.</p>
-        <a href="mailto:cityblocks@icloud.com" class="cta-button">Inquire Now</a>
-    </div>
-    <div class="animation-bg"></div>
+  <div class="container">
+    <h1>CITYBLOCKS.COM</h1>
+    <p id="tagline" class="fade">Urban Planning Reimagined</p>
+    <p class="subtext">Premium domain held since 1997.<br>Now available for acquisition or strategic partnership.</p>
+    <a href="mailto:cityblocks@icloud.com" class="button">Inquire Now</a>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
