--- a/index.html
+++ b/index.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="CityBlocks.com – Build the Next World">
   <title>CityBlocks.com</title>
-  <link rel="stylesheet" href="styles.css" />
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      background-color: #f6f0e7;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+    .logo {
+      max-width: 90%;
+      width: 600px;
+      margin-bottom: 20px;
+    }
+    .cta {
+      font-size: 1.25rem;
+      background-color: #000;
+      color: #fff;
+      padding: 12px 24px;
+      text-decoration: none;
+      border-radius: 6px;
+      transition: background-color 0.3s ease;
+    }
+    .cta:hover {
+      background-color: #444;
+    }
+    .tagline {
+      font-size: 1rem;
+      margin-top: 12px;
+      color: #333;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>CITYBLOCKS.COM</h1>
-    <p id="tagline" class="fade">Urban Planning Reimagined</p>
-    <p class="subtext">Premium domain held since 1997.<br>Now available for acquisition or strategic partnership.</p>
-    <a href="mailto:cityblocks@icloud.com" class="button">Inquire Now</a>
-  </div>
-  <script src="script.js"></script>
+  <img src="Cityblocks4Verses.png" alt="Build the Next World - CityBlocks.com" class="logo">
+  <a class="cta" href="mailto:cityblocks@icloud.com?subject=CityBlocks.com Inquiry">Inquire Now</a>
+  <div class="tagline">Est. 1997 • A Metaverse Engine in the Making</div>
 </body>
 </html>
