--- a/index.html
+++ b/index.html
@@ -1,48 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="CityBlocks.com – Build the Next World">
-  <title>CityBlocks.com</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CityBlocks.com – Build the Next World</title>
   <style>
     body {
       margin: 0;
+      background-color: #000;
       font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      background-color: #f6f0e7;
+      color: #fff;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
     }
-    .logo {
-      max-width: 90%;
-      width: 600px;
+    .grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 10px;
+      width: 90%;
+      max-width: 1000px;
       margin-bottom: 20px;
+    }
+    .tile {
+      position: relative;
+      width: 100%;
+      aspect-ratio: 1 / 1;
+      overflow: hidden;
+      border-radius: 8px;
+      background-color: #111;
+    }
+    .tile video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: none;
+    }
+    .tile img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+    .tile:hover img {
+      display: none;
+    }
+    .tile:hover video {
+      display: block;
     }
     .cta {
       font-size: 1.25rem;
-      background-color: #000;
-      color: #fff;
+      background-color: #fff;
+      color: #000;
       padding: 12px 24px;
       text-decoration: none;
       border-radius: 6px;
-      transition: background-color 0.3s ease;
+      margin-top: 20px;
     }
     .cta:hover {
-      background-color: #444;
+      background-color: #ccc;
     }
     .tagline {
       font-size: 1rem;
-      margin-top: 12px;
-      color: #333;
+      margin-top: 10px;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
-  <img src="Cityblocks4Verses.png" alt="Build the Next World - CityBlocks.com" class="logo">
-  <a class="cta" href="mailto:cityblocks@icloud.com?subject=CityBlocks.com Inquiry">Inquire Now</a>
+  <div class="grid">
+    <div class="tile">
+      <img src="1940s.png" alt="1940s Era" />
+      <video src="1940s.mp4" autoplay muted loop playsinline></video>
+    </div>
+    <div class="tile">
+      <img src="PresentDay.png" alt="Present Day" />
+      <video src="PresentDay.mp4" autoplay muted loop playsinline></video>
+    </div>
+    <div class="tile">
+      <img src="Future.png" alt="Future" />
+      <video src="Future.mp4" autoplay muted loop playsinline></video>
+    </div>
+    <div class="tile">
+      <img src="HistoricPast.png" alt="Historic Past" />
+      <video src="HistoricPast.mp4" autoplay muted loop playsinline></video>
+    </div>
+  </div>
+  <a class="cta" href="InvestorStatement.pdf" target="_blank">Inquire Now</a>
   <div class="tagline">Est. 1997 • A Metaverse Engine in the Making</div>
 </body>
 </html>
