--- a/index.html
+++ b/index.html
@@ -2,94 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CityBlocks.com – Build the Next World</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: #000;
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      gap: 10px;
-      width: 90%;
-      max-width: 1000px;
-      margin-bottom: 20px;
-    }
-    .tile {
-      position: relative;
-      width: 100%;
-      aspect-ratio: 1 / 1;
-      overflow: hidden;
-      border-radius: 8px;
-      background-color: #111;
-    }
-    .tile video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: none;
-    }
-    .tile img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-    .tile:hover img {
-      display: none;
-    }
-    .tile:hover video {
-      display: block;
-    }
-    .cta {
-      font-size: 1.25rem;
-      background-color: #fff;
-      color: #000;
-      padding: 12px 24px;
-      text-decoration: none;
-      border-radius: 6px;
-      margin-top: 20px;
-    }
-    .cta:hover {
-      background-color: #ccc;
-    }
-    .tagline {
-      font-size: 1rem;
-      margin-top: 10px;
-      color: #ccc;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CityBlocks.com</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <div class="grid">
-    <div class="tile">
-      <img src="1940s.png" alt="1940s Era" />
-      <video src="1940s.mp4" autoplay muted loop playsinline></video>
+  <div class="container">
+    <div class="grid">
+      <!-- Top Left - 1940s -->
+      <div class="cell" id="world-1940s">
+        <video class="world-video" src="1940s.mp4" muted loop></video>
+        <div class="label">1940s</div>
+      </div>
+
+      <!-- Top Right - Present Day -->
+      <div class="cell" id="world-present">
+        <video class="world-video" src="PresentDay.mp4" muted loop></video>
+        <div class="label">Present Day</div>
+      </div>
+
+      <!-- Bottom Left - Future -->
+      <div class="cell" id="world-future">
+        <video class="world-video" src="Future.mp4" muted loop></video>
+        <div class="label">Future</div>
+      </div>
+
+      <!-- Bottom Right - Historic Past -->
+      <div class="cell" id="world-past">
+        <video class="world-video" src="HistoricPast.mp4" muted loop></video>
+        <div class="label">Historic Past</div>
+      </div>
     </div>
-    <div class="tile">
-      <img src="PresentDay.png" alt="Present Day" />
-      <video src="PresentDay.mp4" autoplay muted loop playsinline></video>
+
+    <div class="inquire">
+      <a href="CityBlocks_Investor_Deck.pdf" target="_blank" class="btn">Inquire Now</a>
     </div>
-    <div class="tile">
-      <img src="Future.png" alt="Future" />
-      <video src="Future.mp4" autoplay muted loop playsinline></video>
-    </div>
-    <div class="tile">
-      <img src="HistoricPast.png" alt="Historic Past" />
-      <video src="HistoricPast.mp4" autoplay muted loop playsinline></video>
-    </div>
+
+    <footer>
+      <p>Est. 1997 • A Metaverse Engine in the Making</p>
+    </footer>
   </div>
-  <a class="cta" href="InvestorStatement.pdf" target="_blank">Inquire Now</a>
-  <div class="tagline">Est. 1997 • A Metaverse Engine in the Making</div>
+
+  <script src="script.js"></script>
 </body>
 </html>
