--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   height: 100vh;
   object-fit: cover;
   z-index: 9999;
-  background-color: green;
+  background-color: black;
 " onended="fadeOutVideo()">
   <source src="cityblocks_intro.mp4" type="video/mp4">
   Your browser does not support the video tag.
