--- a/index.html
+++ b/index.html
@@ -67,7 +67,29 @@
       font-size: 1rem;
       margin-top: 10px;
       color: #ccc;
-    }
+    }#introText {
+  position: fixed;
+  top: 40%;
+  width: 100%;
+  text-align: center;
+  z-index: 99999;
+  font-family: 'Helvetica Neue', sans-serif;
+  color: white;
+  font-size: 3rem;
+  pointer-events: none;
+}
+
+.fade-text {
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
   </style>
 </head>
 <body><!-- CityBlocks Intro Animation -->
@@ -84,6 +106,14 @@
   <source src="cityblocks_intro.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
+  <div id="introText">
+  <div class="fade-text" style="animation-delay: 0.5s">BUILD</div>
+  <div class="fade-text" style="animation-delay: 1.5s">THE</div>
+  <div class="fade-text" style="animation-delay: 2.5s">NEXT</div>
+  <div class="fade-text" style="animation-delay: 3.5s">WORLD</div>
+  <div class="fade-text" style="animation-delay: 5s">at CityBlocks.com</div>
+</div>
+
 
 <script>
   function fadeOutVideo() {
