--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CityBlocks.com – Build the Next World</title>
+  <title>CityBlocks.com – Build Your Next World</title>
   <style>
     body {
       margin: 0;
@@ -119,10 +119,11 @@
 </video>
   <div id="introText">
   <div class="fade-text" style="animation-delay: 0s;">BUILD</div>
-  <div class="fade-text" style="animation-delay: 2s;">THE</div>
+  <div class="fade-text" style="animation-delay: 2s;">YOUR</div>
   <div class="fade-text" style="animation-delay: 4s;">NEXT</div>
   <div class="fade-text" style="animation-delay: 6s;">WORLD</div>
-  <div class="fade-text" style="animation-delay: 8s;">at CityBlocks.com</div>
+  <div class="fade-text" style="animation-delay: 6s;">at</div>
+  <div class="fade-text" style="animation-delay: 8s;">CityBlocks</div>
 </div>
 
 
