--- a/index.html
+++ b/index.html
@@ -3,92 +3,144 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CityBlocks Intro</title>
+<title>CityBlocks.com</title>
 <style>
-  body {
-    margin: 0;
-    padding: 0;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: Arial, sans-serif;
-    overflow: hidden;
-  }
+    body {
+        margin: 0;
+        padding: 0;
+        background-color: white;
+        overflow: hidden;
+        font-family: Arial, sans-serif;
+    }
 
-  .intro-container {
-    text-align: center;
-    position: relative;
-  }
+    /* Intro container */
+    #intro {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 10;
+    }
 
-  .intro-text {
-    font-size: 3rem;
-    font-weight: bold;
-    opacity: 0;
-    transform: scale(0.9);
-    transition: opacity 0.4s ease, transform 0.4s ease;
-  }
+    #introText {
+        font-size: 3vw;
+        font-weight: bold;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+    }
 
-  .intro-text.show {
-    opacity: 1;
-    transform: scale(1);
-  }
+    #logo {
+        width: 20vw;
+        max-width: 300px;
+        opacity: 0;
+        transition: opacity 0.5s ease;
+        margin-top: 10px;
+    }
 
-  .logo {
-    max-width: 300px;
-    margin-top: 20px;
-    opacity: 0;
-    transform: scale(0.8);
-    transition: opacity 0.8s ease, transform 0.8s ease;
-  }
+    /* Quadrant background */
+    #quadrants {
+        width: 100%;
+        height: 100%;
+        background: url('Cityblocks4Verses.png') no-repeat center center/cover;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
 
-  .logo.show {
-    opacity: 1;
-    transform: scale(1);
-  }
+    /* Inquire Now button */
+    #inquireBtn {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        padding: 15px 25px;
+        background-color: #000;
+        color: #fff;
+        border: none;
+        font-size: 1.2em;
+        cursor: pointer;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(255,255,255,0.6);
+        animation: pulse 2s infinite;
+        z-index: 5;
+    }
+
+    @keyframes pulse {
+        0% { box-shadow: 0 0 10px rgba(255,255,255,0.6); }
+        50% { box-shadow: 0 0 20px rgba(255,255,255,1); }
+        100% { box-shadow: 0 0 10px rgba(255,255,255,0.6); }
+    }
 </style>
 </head>
 <body>
 
-<div class="intro-container">
-  <div id="text"></div>
-  <img id="logo" class="logo" src="logo.png" alt="CityBlocks Logo">
+<div id="intro">
+    <div id="introText"></div>
+    <img id="logo" src="cityblocks-logo.png" alt="CityBlocks Logo">
 </div>
 
+<div id="quadrants"></div>
+
+<button id="inquireBtn">Inquire Now</button>
+
 <script>
-  const words = ["BUILD...", "THE...", "NEXT...", "WORLD...", "AT...", "CITYBLOCKS.COM"];
-  const textContainer = document.getElementById("text");
-  const logo = document.getElementById("logo");
+const introTextEl = document.getElementById('introText');
+const logoEl = document.getElementById('logo');
+const introEl = document.getElementById('intro');
 
-  let delay = 0;
+const lines = [
+    "Build...",
+    "Your...",
+    "Next...",
+    "World...",
+    "at",
+    "CityBlocks.com"
+];
 
-  words.forEach((word, index) => {
+let delay = 0;
+
+lines.forEach((line, index) => {
     setTimeout(() => {
-      textContainer.textContent = word;
-      textContainer.classList.add("intro-text", "show");
+        introTextEl.textContent = line;
+        introTextEl.style.opacity = 1;
 
-      // Remove show class after each word except last
-      if (index < words.length - 1) {
+        if (line.toLowerCase() === "cityblocks.com") {
+            logoEl.style.opacity = 1; // Show logo with final line
+        }
+
         setTimeout(() => {
-          textContainer.classList.remove("show");
+            introTextEl.style.opacity = 0;
         }, 400);
-      }
 
-      // When CITYBLOCKS.COM appears, fade in the logo
-      if (word === "CITYBLOCKS.COM") {
-        logo.classList.add("show");
-      }
     }, delay);
 
-    // Slightly faster on "AT..."
-    delay += (word === "AT...") ? 500 : 900;
-  });
+    // Faster speed for "at"
+    delay += (line.toLowerCase() === "at") ? 400 : 900;
+});
 
-  // After everything, fade to homepage
-  setTimeout(() => {
-    window.location.href = "homepage.html";
-  }, delay + 2000);
+setTimeout(() => {
+    introEl.style.transition = "opacity 1s ease, transform 1s ease";
+    introEl.style.opacity = 0;
+    introEl.style.transform = "scale(0.7)";
+}, delay + 500);
+
+setTimeout(() => {
+    introEl.style.display = "none";
+}, delay + 1500);
+
+// Inquire Now button function
+document.getElementById('inquireBtn').addEventListener('click', () => {
+    window.open('Investor-OneSheet.pdf', '_blank'); // PDF first
+    setTimeout(() => {
+        window.location.href = 'mailto:cityblocks@icloud.com';
+    }, 2000);
+});
 </script>
 
 </body>
